--- a/LogogramHelper/LogogramHelper.csproj
+++ b/LogogramHelper/LogogramHelper.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Authors>apetih</Authors>
     <Company></Company>
-    <Version>0.0.1.5</Version>
+    <Version>0.0.1.6</Version>
     <Description>Helper plugin for Eureka's Logos Actions</Description>
     <Copyright></Copyright>
     <PackageProjectUrl>https://github.com/apetih/LogogramHelper</PackageProjectUrl>
@@ -26,6 +26,10 @@
           <Visible>false</Visible>
       </Content>
       <Content Include="..\res\data\logosActions.json">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+          <Visible>false</Visible>
+      </Content>
+      <Content Include="..\res\data\itemContents.json">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
           <Visible>false</Visible>
       </Content>
